<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.example.login_assignment.SignUp" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp">

        <TextView
            android:id="@+id/tvSignupPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/signup_page"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etUserSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/userName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.869"
            app:layout_constraintStart_toEndOf="@+id/tvUserSignup"
            app:layout_constraintTop_toBottomOf="@+id/tvSignupPage" />

        <EditText
            android:id="@+id/etPasswordSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="43dp"
            android:ems="10"
            android:hint="@string/pswd"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvPasswordSignup"
            app:layout_constraintTop_toBottomOf="@+id/etUserSignup" />

        <TextView
            android:id="@+id/tvUserSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:text="@string/User_Name"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/etUserSignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etUserSignup" />

        <TextView
            android:id="@+id/tvPasswordSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/etPasswordSignup"
            app:layout_constraintStart_toStartOf="@+id/tvUserSignup"
            app:layout_constraintTop_toTopOf="@+id/etPasswordSignup" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:onClick="signup"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="@+id/Success"
            app:layout_constraintStart_toStartOf="@+id/Success"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordSignup" />

        <TextView
            android:id="@+id/Success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:clickable="true"
            android:text="If Already Signup...Login Now"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>